--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>BnB Website</h1>
     <p>Hello</p>
     <p>Hi</p>
+    <img src="Ubud-Bali.jpg" alt="Description of the image">
 </body>
 
 </html>
