--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <p>Hello</p>
     <p>Hi</p>
     <img src="Ubud-Bali.jpg" alt="Description of the image">
+
+    <!-- Smaller images overlaid on the main image -->
+    <img class="small-image small-image1" src="Ubud-Bali.jpg" alt="Smaller Image 1">
+    <img class="small-image small-image2" src="Ubud-Bali.jpg" alt="Smaller Image 2">
+
 </body>
 
 </html>
