--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <h1>BnB Website</h1>
+    <link rel="stylesheet" href="overview.html">
     <p>Hello</p>
-    <p>Hi</p>
+    <p>Bye</p>
     <img src="Ubud-Bali.jpg" alt="Description of the image">
 
     <!-- Smaller images overlaid on the main image -->
