--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 
 <body>
     <h1>BnB Website</h1>
-    <link rel="stylesheet" href="overview.html">
+    <a href="/overview.html">Overview</a>
     <p>Hello</p>
     <p>Bye</p>
     <img src="Ubud-Bali.jpg" alt="Description of the image">
 
-    <!-- Smaller images overlaid on the main image -->
-    <img class="small-image small-image1" src="Ubud-Bali.jpg" alt="Smaller Image 1">
-    <img class="small-image small-image2" src="Ubud-Bali.jpg" alt="Smaller Image 2">
+
+    <div class="image-container">
+        <!-- Four images -->
+        <img class="image" src="Ubud-Bali.jpg" alt="Image 1">
+        <img class="image" src="Ubud-Bali.jpg" alt="Image 2">
+        <img class="image" src="Ubud-Bali.jpg" alt="Image 3">
+        <img class="image" src="Ubud-Bali.jpg" alt="Image 4">
+    </div>
 
 </body>
 
