--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>BnB Website</h1>
-    <a href="/overview.html">Overview</a>
+    <a href="/bnb/overview.html">Overview</a>
     <p>Hello</p>
     <p>Bye</p>
     <img src="Ubud-Bali.jpg" alt="Description of the image">
