--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
         <img class="image" src="Ubud-Bali.jpg" alt="Image 4">
     </div>
 
+    <!-- Main container for the layout -->
+    <div class="main-container">
+        <!-- Left image container taking half of the page -->
+        <div class="left-image-container">
+        </div>
+
+        <!-- Right container holding the square image -->
+        <div class="right-image-container">
+            <img class="right-image" src="Ubud-Bali.jpg" alt="Right Image">
+        </div>
+    </div>
+
+
+
 </body>
 
 </html>
