--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <a href="/bnb/overview.html">Overview</a>
     <p>Hello</p>
     <p>Bye</p>
-    <img src="Ubud-Bali.jpg" alt="Description of the image">
+    <div class="image-container">
+        <!-- Image -->
+        <img class="Ubud-Bali" src="image.jpg" alt="Main Image">
+
+        <!-- Text overlaid on the image -->
+        <div class="image-text">
+            BNB stay
+        </div>
+    </div>
 
 
     <!-- Main container for the layout -->
