--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+<!-- https://jamstackthemes.dev/demo/theme/planty/ -->
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +15,7 @@
     <p>Bye</p>
     <div class="image-container">
         <!-- Image -->
-        <img class="Ubud-Bali" src="image.jpg" alt="Main Image">
+        <img class="left-image" src="Ubud-Bali.jpg" alt="Main Image">
 
         <!-- Text overlaid on the image -->
         <div class="image-text">
@@ -31,7 +32,7 @@
 
         <!-- Right container holding the square image -->
         <div class="right-image-container">
-            <img class="right-image" src="Ubud-Bali.jpg" alt="Right Image">
+            <img class="right-image" src="vertical1.jpg" alt="Right Image">
         </div>
     </div>
 
