--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 
 <body>
     <h1>BnB Website</h1>
-    <a href="/bnb/overview.html">Overview</a>
-    <p>Hello</p>
-    <p>Bye</p>
-    <div class="image-container">
-        <!-- Image -->
-        <img class="left-image" src="Ubud-Bali.jpg" alt="Main Image">
+    <a href="/bnb/Gallery.html" , class="inline-elements">Gallery</a>
+    <p, class="inline-elements">Hello</p>
+        <p, class="inline-elements">Bye</p>
+            <div class="image-container">
+                <!-- Image -->
+                <img class="left-image" src="Ubud-Bali.jpg" alt="Main Image">
 
-        <!-- Text overlaid on the image -->
-        <div class="image-text">
-            BNB stay
-        </div>
-    </div>
+                <!-- Text overlaid on the image -->
+                <div class="image-text">
+                    BNB stay
+                </div>
+            </div>
 
 
-    <!-- Main container for the layout -->
-    <div class="main-container">
-        <!-- Left image container taking half of the page -->
-        <div class="left-image-container">
-        </div>
+            <!-- Main container for the layout -->
+            <div class="main-container">
+                <!-- Left image container taking half of the page -->
+                <div class="left-image-container">
+                </div>
 
-        <!-- Right container holding the square image -->
-        <div class="right-image-container">
-            <img class="right-image" src="vertical1.jpg" alt="Right Image">
-        </div>
-    </div>
+                <!-- Right container holding the square image -->
+                <div class="right-image-container">
+                    <img class="right-image" src="vertical1.jpg" alt="Right Image">
+                </div>
+            </div>
 
 
 
