--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>BnB Website</h1>
     <a href="/bnb/Gallery.html" , class="inline-elements">Gallery</a>
+    <a href="/bnb/ContactUs.html" , class="inline-elements">ContactUs</a>
     <p, class="inline-elements">Hello</p>
         <p, class="inline-elements">Bye</p>
             <div class="image-container">
