--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <h1>BnB Website</h1>
     <a href="/bnb/Gallery.html" , class="inline-elements">Gallery</a>
-    <a href="/bnb/ContactUs.html" , class="inline-elements">ContactUs</a>
+    <a href="/bnb/ContactUs.html" , class="inline-elements">Contact Us</a>
     <p, class="inline-elements">Hello</p>
         <p, class="inline-elements">Bye</p>
             <div class="image-container">
                 <!-- Image -->
                 <img class="left-image" src="Ubud-Bali.jpg" alt="Main Image">
 
-                <!-- Text overlaid on the image -->
+                <!-- Text overlaid on the image
                 <div class="image-text">
                     BNB stay
-                </div>
+                </div> -->
             </div>
 
 
