--- a/ContactUs.html
+++ b/ContactUs.html
@@ -3,7 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CONTACT US</title>
+    <style>
+        /* Style for the form */
+        form {
+            width: 300px;
+            /* Set the width of the form */
+            margin: 0 auto;
+            /* Center the form horizontally */
+        }
+
+        /* Style for form input fields and textarea */
+        input[type="text"],
+        input[type="email"],
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            /* Set border radius for rounded corners */
+        }
+
+        input[type="submit"] {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            /* Set border radius for rounded corners */
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
