--- a/ContactUs.html
+++ b/ContactUs.html
@@ -30,18 +30,23 @@
             border: none;
             border-radius: 5px;
             /* Set border radius for rounded corners */
-            background-color: #4CAF50;
-            color: white;
+            background-color: #3d7163;
+            color: whitesmoke;
             cursor: pointer;
         }
     </style>
+    <script>
+        function showMessage() {
+            alert("Email sent!"); // Display an alert message
+        }
+    </script>
 </head>
 
 <body>
 
     <h1>Contact Us</h1>
 
-    <form action="send-email.php" method="post">
+    <form action="send-email.php" method="post" onsubmit="showMessage()">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br><br>
 
@@ -51,7 +56,7 @@
         <label for="message">Message:</label><br>
         <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
 
-        <input type="submit" value="Submit">
+        <input type="submit" value="Send">
     </form>
 
 
