--- a/ContactUs.html
+++ b/ContactUs.html
@@ -30,7 +30,7 @@
             border: none;
             border-radius: 5px;
             /* Set border radius for rounded corners */
-            background-color: #3d7163;
+            background-color: rgb(86, 135, 149);
             color: whitesmoke;
             cursor: pointer;
         }
@@ -39,6 +39,18 @@
         function showMessage() {
             alert("Email sent!"); // Display an alert message
         }
+        function redirectToSamePage() {
+            // Redirect to the same page after 2 seconds (2000 milliseconds)
+            setTimeout(function () {
+                window.location.href = window.location.href;
+            }, 2000);
+        }
+        function submitForm() {
+            showMessage()
+            redirectToSamePage(); // Call redirect function
+            return true; // Return true to submit the form
+        }
+
     </script>
 </head>
 
@@ -46,7 +58,7 @@
 
     <h1>Contact Us</h1>
 
-    <form action="send-email.php" method="post" onsubmit="showMessage()">
+    <form action="send-email.php" method="post" onsubmit="submitForm()">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br><br>
 
