--- a/ContactUs.html
+++ b/ContactUs.html
@@ -47,7 +47,7 @@
 
         function submitForm() {
             showMessageAndRedirect();
-            return form;
+            return false;
         }
 
     </script>
