--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BnB</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,8 +14,7 @@
     <a href="/bnb/ContactUs.html" , class="inline-elements">Contact Us</a>
     <p, class="inline-elements">Hello</p>
         <p, class="inline-elements">Bye</p>
-            <div class="image-container">
-                <!-- Image -->
+            <div class="main-container">
                 <img class="left-image" src="Ubud-Bali.jpg" alt="Main Image">
 
                 <!-- Text overlaid on the image
