--- a/ContactUs.html
+++ b/ContactUs.html
@@ -57,7 +57,7 @@
 
     <h1>Contact Us</h1>
 
-    <form action="ContactUs.html" method="post" onsubmit="submitForm()">
+    <form action="https://formspree.io/f/mwkdjqro" method="post">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br><br>
 
