--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <p, class="inline-elements">Hello</p>
         <p, class="inline-elements">Bye</p>
             <div class="main-container">
-                <img class="left-image" src="Ubud-Bali.jpg" alt="Main Image">
+                <img class="full-width" src="Ubud-Bali.jpg" alt="Full-Width Image">
 
-                <!-- Text overlaid on the image
-                <div class="image-text">
-                    BNB stay
-                </div> -->
+                <!-- Overlay text -->
+                <div class="overlay-text">
+                    Your Text Here
+                </div>
             </div>
 
 
