--- a/Gallery.html
+++ b/Gallery.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
+    <title>GALLERY</title>
 </head>
 
 <body>
+    <iframe src="navigation.html" frameborder="0" width="100%" height="50px"></iframe>
     <h1>Gallery</h1>
 </body>
 
