--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <iframe src="navigation.html" frameborder="0" width="100%" height="50px"></iframe>
     <h1>BnB Website</h1>
     <a href="/bnb/Gallery.html" , class="inline-elements">Gallery</a>
     <a href="/bnb/ContactUs.html" , class="inline-elements">Contact Us</a>
