--- a/ContactUs.html
+++ b/ContactUs.html
@@ -54,7 +54,7 @@
 </head>
 
 <body>
-
+    <iframe src="navigation.html" frameborder="0" width="100%" height="50px"></iframe>
     <h1>Contact Us</h1>
 
     <form action="https://formspree.io/f/mwkdjqro" method="post">
