--- a/navigation.html
+++ b/navigation.html
@@ -1,7 +1,65 @@
-<nav>
-    <ul>
-        <li><a href="/bnb/index.html">Home</a></li>
-        <li><a href="/bnb/Gallery.html">Gallery</a></li>
-        <li><a href="/bnb/ContactUs.html">Contact Us</a></li>
-    </ul>
-</nav>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <style>
+        /* Style for the navigation menu */
+        body {
+            margin: 0;
+            /* Remove default margin */
+            font-family: Arial, sans-serif;
+            /* Set font-family */
+        }
+
+        nav {
+            display: flex;
+            /* Use flexbox */
+            justify-content: flex-end;
+            /* Align items to the right */
+            background-color: #333;
+            /* Optional: Set background color */
+            padding: 10px;
+            /* Optional: Add padding */
+            color: white;
+            /* Optional: Set text color */
+        }
+
+        nav ul {
+            list-style-type: none;
+            /* Remove list bullet */
+            margin: 0;
+            /* Remove default margin */
+            padding: 0;
+            /* Remove default padding */
+            display: flex;
+            /* Use flexbox for list items */
+        }
+
+        nav li {
+            margin-left: 15px;
+            /* Add margin between list items */
+        }
+
+        nav a {
+            text-decoration: none;
+            /* Remove underline from links */
+            color: inherit;
+            /* Use default text color */
+        }
+    </style>
+</head>
+
+<body>
+
+    <!-- Navigation menu -->
+    <nav>
+        <ul>
+            <li><a href="/bnb/index.html">Home</a></li>
+            <li><a href="/bnb/Gallery.html">Gallery</a></li>
+            <li><a href="/bnb/ContactUs.html">Contact Us</a></li>
+        </ul>
+    </nav>
+
+</body>
+
+</html>
