--- a/navigation.html
+++ b/navigation.html
@@ -54,9 +54,9 @@
     <!-- Navigation menu -->
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/Gallery.html">Gallery</a></li>
-            <li><a href="/ContactUs.html">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Gallery.html">Gallery</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
         </ul>
     </nav>
 
